# obse64

./: CMakeLists.txt  LICENSE  README.md  obse64_readme.txt  obse64_whatsnew.txt  sfse_readme.txt  sfse_whatsnew.txt
.github/workflows/: testbuild.yaml
cmake/: installation.cmake  versioning.cmake
obse64/: AltarExtraData.cpp  AltarExtraData.h  AltarSync.cpp  AltarSync.h  CMakeLists.txt  CommandTable.cpp  CommandTable.h  Commands_Console.cpp  Commands_Input.cpp  Commands_Inventory.cpp  Commands_Math.cpp  Commands_MiscReference.cpp  Commands_Player.cpp  GameBSExtraData.cpp  GameBSExtraData.h  GameChargen.cpp  GameConsole.cpp  GameConsole.h  GameData.cpp  GameData.h  GameExtraData.cpp  GameExtraData.h  GameForms.cpp  GameForms.h  GameObjects.cpp  GameObjects.h  GameRTTI.cpp  GameRTTI.h  GameRTTI.inl  GameScript.cpp  GameScript.h  GameTypes.h  Hooks_Data.cpp  Hooks_Gameplay.cpp  Hooks_Gameplay.h  Hooks_Script.cpp  Hooks_Script.h  Hooks_Version.cpp  MersenneTwister.cpp  MersenneTwister.h  (+19 more)
obse64_common/: BranchTrampoline.cpp  BranchTrampoline.h  BufferStream.h  CMakeLists.txt  CoreInfo.h  DataStream.h  FileStream.h  SafeWrite.cpp  SafeWrite.h  Utilities.cpp  Utilities.h  obse64_version.h
obse64_loader/: CMakeLists.txt  IdentifyEXE.cpp  IdentifyEXE.h  Inject.cpp  LoaderError.cpp  Options.cpp  Options.h  SigCheck.cpp  SigCheck.h  main.cpp  obse64_loader.manifest  obse64_loader_version.rc
sfse/: GameRTTI.inl  Hooks_Version.cpp  PluginManager.cpp
sfse_loader/: IdentifyEXE.cpp  IdentifyEXE.h  Inject.cpp  LoaderError.cpp  Options.cpp
